# fast-rlm

./: .gitignore  404.html  README.md  deno.json  fast_rlm.py  index.html  mkdocs.yml  pyproject.toml  rlm_config.yaml  sitemap.xml  test_counting_r.config.yaml  test_counting_r.py
development/benchmarks/: index.html
development/from-source/: index.html
docs/: PARALLEL_EXECUTION.md  index.md
docs/development/: from-source.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: acp-agents.md  configuration.md
examples/: acp_smoketest.py  acp_subagent_rcount.py  book_rec_with_exa.py  http_smoke_test.py  http_smoke_test_async.py  mcp_wikipedia_research.py  parallel_r_count.py  vertex_ai.py
fast_rlm/: _cli.py  _runner.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/acp-agents/: index.html
guide/advanced/: index.html
guide/configuration/: index.html
guide/log-viewer/: index.html
guide/tips/: index.html
guide/tools/: index.html
scripts/: test_dict_input.py  test_mcp.py  test_mcp_fs.py  test_mcp_http.py
scripts/mcp_testbed/: README.md  client.ts  fsio-client.ts  fsio-http.ts  fsio-stdio.ts  fsio.ts  http.ts  package.json  server.ts  stdio.ts
search/: search_index.json
src/: acp.ts  call_llm.ts  config.ts  logging.ts  mcp.ts  parallel.ts  prompt.ts  subagents.ts  ui.ts  usage.ts  vertex.ts
tests/: test_parallel.ts
tui_log_viewer/src/: index.tsx
